--- a/package.json
+++ b/package.json
@@ -3,5 +3,26 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.10"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "js_invoiceKeeper_backend",
+  "description": "",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.3.0"
+  },
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:dgarcia02/jd_invoiceKeeper_backend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dgarcia02/jd_invoiceKeeper_backend/issues"
+  },
+  "homepage": "https://github.com/dgarcia02/jd_invoiceKeeper_backend"
 }
